finish fixing bug overflow image in detail page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -446,7 +446,7 @@ cursor: pointer;
   display: grid;
   grid-gap: 1rem;
   grid-template-columns: repeat(3, 1fr);
-  padding: 8px 3rem;
+  padding: 7px 3rem;
   position: relative;
 }
 
@@ -475,8 +475,9 @@ cursor: pointer;
   justify-content: center;
   position: absolute;
   right: 1rem;
-  top: 1.25rem;
+  top: 0.875rem;
   width: 2rem;
+  cursor: pointer;
 }
 
 .search__container input {
@@ -771,7 +772,7 @@ cursor: pointer;
 
 .house-detail__images-left {
   height: 100%;
-  max-height: 100%;
+  max-height: 500px;
   width: 100%;
 }
 
@@ -779,7 +780,7 @@ cursor: pointer;
   border-bottom-left-radius: 1rem;
   border-top-left-radius: 1rem;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   width: 100%;
 }
 
@@ -795,7 +796,8 @@ cursor: pointer;
 .house-detail__images-right img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  max-height: 250px;
+  object-fit: contain;
 }
 
 .house-detail__images-right img:nth-child(2) {
